[project]
name = "fuck_cqooc"
version = "v0.0.6-beta"
description = "一个重庆高校在线开放课程平台刷课工具。"
authors = [
    { name = "Fatpandac", email = "i@fatpandac.com" }
]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }
dependencies = ["hackcqooc~=0.0.8", "flet~=0.7.1", "pipreqs~=0.4.13"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["pre-commit~=3.3.1", "pillow~=9.5.0"]

[tool.rye.scripts]
dev = "python src/app.py"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | __pycache__
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 79
